--- a/Week_One_Python_Bootcamp.ipynb
+++ b/Week_One_Python_Bootcamp.ipynb
@@ -6,7 +6,7 @@
       "name": "Week One Python Bootcamp.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMdd39j+bufkcgKym5Tud1D",
+      "authorship_tag": "ABX9TyNmRJ1J9eXv1tlRLw1KNrtp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,85 +26,23 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6PfMEg09-ZVI",
-        "outputId": "ddf9977a-a0cd-45de-c780-a9b1a7ab32f1"
+        "id": "WNCiiFVukkQT"
       },
       "source": [
-        "import requests\n",
-        "response = requests.get('https://www.google.com')\n",
-        "\n",
-        "print(response)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "<Response [200]>\n"
-          ],
-          "name": "stdout"
-        }
+        ""
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "zA96Xz1HafsP"
+        "id": "00_u8EeIkpMS"
       },
       "source": [
-        "data = ['a', 'b', 'c', 'd', 'e']\r\n",
-        "\r\n",
-        "i=0\r\n",
-        "\r\n",
-        "while i < len(data):\r\n",
-        "  print(data[i], end=\" \")\r\n",
-        "  i += 1\r\n",
-        "\r\n",
-        "  while True:\r\n",
-        "  \r\n",
-        "   x = input()\r\n",
-        "    if x == \"stop\":\r\n",
-        "      break\r\n",
-        "    elif   x == \"special\":\r\n",
-        "      continue\r\n",
-        "      print(\"printing data...\")"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TqAvfTQ7mXLA"
-      },
-      "source": [
-        " from random  import randint\r\n",
-        "\r\n",
-        "randomRange = guess\r\n",
-        "low = 0\r\n",
-        "high = 100\r\n",
-        "correct = randint(low, high)\r\n",
-        "print (correct)\r\n",
-        "print(f'guess a number between {low} and {high}!')\r\n",
-        "while True:\r\n",
-        "  guess = int(input())\r\n",
-        "  \r\n",
-        "  if guess < correct:\r\n",
-        "    print('guess higher!')\r\n",
-        "  elif guess > correct:\r\n",
-        "    print ('guess lower')\r\n",
-        "  else: \r\n",
-        "    print ('correct guess!')\r\n",
-        "    break\r\n",
-        "\r\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "##Python Bootcamp   \r\n",
+        "Week1"
+      ]
     },
     {
       "cell_type": "markdown",
